plugins {
    id 'java'
    id 'org.springframework.boot' version '3.4.6'
    id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com'
version = '0.0.1-SNAPSHOT'
description = 'Demo project for Spring Boot'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
    maven { url 'https://jitpack.io' } // Komoran 형태소 분석기용
}

// 버전 관리용 변수 설정
ext {
    set('springAiVersion', "1.0.0")
}

dependencies {
    // 1. Web & Real-time
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-webflux'
    implementation 'org.springframework.boot:spring-boot-starter-websocket'
    implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
    developmentOnly 'org.springframework.boot:spring-boot-devtools'

    // 2. Database & JPA
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-jdbc'
    runtimeOnly 'org.mariadb.jdbc:mariadb-java-client'
    runtimeOnly 'org.postgresql:postgresql:42.7.3'

    // 3. QueryDSL (Spring Boot 3.x Jakarta 대응)
    implementation 'com.querydsl:querydsl-jpa:5.0.0:jakarta'
    annotationProcessor 'com.querydsl:querydsl-apt:5.0.0:jakarta'
    annotationProcessor 'jakarta.annotation:jakarta.annotation-api'
    annotationProcessor 'jakarta.persistence:jakarta.persistence-api'

    // 4. Security & JWT
    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
    runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
    runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5'

    // 5. Spring AI (OpenAI & Ollama 기반)
    implementation 'org.springframework.ai:spring-ai-starter-model-openai'

    // 6. Audio/STT (Vosk & JAVE)
    implementation 'com.alphacephei:vosk:0.3.45'
    implementation 'net.java.dev.jna:jna:5.13.0'
    implementation 'ws.schild:jave-all-deps:3.3.1'

    // 7. Utilities & Environment
    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'
    implementation 'org.modelmapper:modelmapper:3.1.1'
    implementation 'net.coobird:thumbnailator:0.4.19'
    implementation 'com.google.code.gson:gson:2.10.1'
    implementation 'me.paulschwarz:spring-dotenv:4.0.0' // .env 지원

    // 8. Test
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'io.projectreactor:reactor-test'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
    testCompileOnly 'org.projectlombok:lombok'
    testAnnotationProcessor 'org.projectlombok:lombok'

    // PDF 생성 라이브러리 (iText7)
    implementation 'com.itextpdf:itext7-core:7.2.5'
    // 한글 처리를 위한 라이브러리 (필수)
    implementation 'com.itextpdf:font-asian:7.2.5'

    // JSON 파싱을 위한 Jackson (이미 있다면 생략 가능)
    implementation 'com.fasterxml.jackson.core:jackson-databind'

    // 9. 한국어 형태소 분석기 (Komoran) - 자연어 파싱용
    implementation 'com.github.shin285:KOMORAN:3.3.9'

//    PDF 의존성 주입
    implementation 'org.apache.pdfbox:pdfbox:2.0.30'
}

// Spring AI BOM 추가
dependencyManagement {
    imports {
        mavenBom "org.springframework.ai:spring-ai-bom:${springAiVersion}"
    }


}

tasks.named('test') {
    useJUnitPlatform()
}

// QueryDSL Q클래스 생성 경로 지정 (선택사항)
tasks.named('compileJava') {
    options.annotationProcessorGeneratedSourcesDirectory = file("$buildDir/generated/sources/annotationProcessor/java/main")
    // Spring MVC가 @RequestParam/@PathVariable의 파라미터 이름을 리플렉션으로 읽을 수 있도록 메타데이터 포함
    options.compilerArgs += ['-parameters']
}